--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.mateusmuller.qsmart"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.github.Vatican-Cameos:CarouselPicker:v1.0'
     implementation 'com.android.support:design:27.1.1'
 
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
