--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.Vatican-Cameos:CarouselPicker:v1.0'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.github.clans:fab:1.6.2'
 
     implementation 'com.android.support:cardview-v7:27.1.1'
 }
